cabal-version:      2.4
name:               wiredtiger-haskell
version:            0.1.0.0
homepage:           https://github.com/andreabedini/wiredtiger-haskell
bug-reports:        https://github.com/andreabedini/wiredtiger-haskell/issues
license:            BSD-3-Clause
license-file:       LICENCE
author:             Andrea Bedini
maintainer:         andrea@andreabedini.com
copyright:          Copyright (c) 2021, Andrea Bedini
category:           Database, FFI
extra-source-files: CHANGELOG.md
synopsis:           Haskell bindings to WiredTiger
description:
    WiredTiger is an high performance, scalable, production quality, NoSQL,
    Open Source extensible platform for data management.

    This library provides a Haskell language binding to WiredTiger. It is in very early stage.


source-repository head
  type:     git
  location: https://github.com/andreabedini/wiredtiger-haskell


library
    exposed-modules:     WiredTiger.Bindings
                       , WiredTiger.IntPack
                       , WiredTiger.Schema
    build-depends:       base ^>=4.14.1.0
                       , bytestring ^>= 0.11.1.0
                       , cereal
                       , containers
                       , inline-c
    pkgconfig-depends:   wiredtiger>=10.0.0
    default-language:    Haskell2010
    ghc-options:         -Wall -O

test-suite examples
    type: exitcode-stdio-1.0
    main-is: Test.hs
    other-modules:
        Access
        CallCenter
    hs-source-dirs: examples
    build-depends:
          base ^>=4.14.1.0
        , wiredtiger-haskell
        , bytestring ^>= 0.11.1.0
        , directory
        , cereal
        , hspec
        , tasty
        , tasty-hspec
        , extra

    default-language: Haskell2010
    ghc-options:      -Wall
