cabal-version:      2.4
name:               wiredtiger
version:            0.1.0.0
homepage:           https://github.com/andreabedini/wiredtiger-haskell
bug-reports:        https://github.com/andreabedini/wiredtiger-haskell/issues
license:            BSD-3-Clause
license-file:       LICENCE
author:             Andrea Bedini
maintainer:         andrea@andreabedini.com
copyright:          Copyright (c) 2021, Andrea Bedini
category:           Database, FFI
extra-source-files: CHANGELOG.md
synopsis:           Haskell bindings to WiredTiger
description:
    WiredTiger is an high performance, scalable, production quality, NoSQL,
    Open Source extensible platform for data management.

    This library provides a Haskell language binding to WiredTiger. It is in very early stage.


source-repository head
  type:     git
  location: https://github.com/andreabedini/wiredtiger-haskell


library
    exposed-modules:     WiredTiger.Raw
                       , WiredTiger.Schema
    other-modules:       WiredTiger.Context
                       , WiredTiger.IntPack
                       , WiredTiger.Types
    build-depends:       base ^>=4.14.1.0
                       , bytestring ^>= 0.11.1.0
                       , cereal
                       , containers
                       , inline-c
    pkgconfig-depends:   wiredtiger
    default-language:    Haskell2010
    ghc-options:         -Wall -O
    cc-options:          -Wall

executable access
    hs-source-dirs:      examples/access
    main-is:             Main.hs
    build-depends:       base ^>=4.14.1.0
                       , bytestring
                       , cereal
                       , wiredtiger
    default-language:    Haskell2010

executable call-center
    hs-source-dirs:      examples/call-center
    main-is:             Main.hs
    build-depends:       base ^>=4.14.1.0
                       , cereal
                       , wiredtiger
    default-language:    Haskell2010
