cabal-version:      2.4
name:               wiredtiger
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENCE
copyright:          Copyright (c) 2021, Andrea Bedini
maintainer:         andrea@andreabedini.com
author:             Andrea Bedini
homepage:           https://github.com/andreabedini/wiredtiger-haskell
bug-reports:        https://github.com/andreabedini/wiredtiger-haskell/issues
synopsis:           Haskell bindings to WiredTiger
description:
    WiredTiger is an high performance, scalable, production quality, NoSQL,
    Open Source extensible platform for data management.
    This library provides a Haskell language binding to WiredTiger. It is in very early stage.

category:           Database, FFI
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/andreabedini/wiredtiger-haskell

library
    exposed-modules:
        WiredTiger.Raw
        WiredTiger.Schema
        WiredTiger.IntPack

    cc-options:        -Wall
    pkgconfig-depends: wiredtiger -any
    hs-source-dirs:    src
    other-modules:
        WiredTiger.Raw.Context
        WiredTiger.Raw.Types

    default-language:  Haskell2010
    ghc-options:       -Wall -O
    build-depends:
        base ^>=4.14.1.0,
        bytestring ^>=0.11.1.0,
        cereal -any,
        containers -any,
        inline-c -any

executable access
    main-is:          Main.hs
    hs-source-dirs:   examples/access
    default-language: Haskell2010
    build-depends:
        base ^>=4.14.1.0,
        bytestring -any,
        cereal -any,
        wiredtiger -any

executable call-center
    main-is:          Main.hs
    hs-source-dirs:   examples/call-center
    default-language: Haskell2010
    build-depends:
        base ^>=4.14.1.0,
        cereal -any,
        wiredtiger -any
