cabal-version:      2.4
name:               wiredtiger
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENCE
copyright:          Copyright (c) 2021, Andrea Bedini
maintainer:         andrea@andreabedini.com
author:             Andrea Bedini
homepage:           https://github.com/andreabedini/wiredtiger-haskell
bug-reports:        https://github.com/andreabedini/wiredtiger-haskell/issues
synopsis:           Haskell bindings to WiredTiger
description:
    WiredTiger is an high performance, scalable, production quality, NoSQL,
    Open Source extensible platform for data management.
    This library provides a Haskell language binding to WiredTiger. It is in very early stage.

category:           Database, FFI
extra-source-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/andreabedini/wiredtiger-haskell

library
    exposed-modules:
        WiredTiger.Raw
        WiredTiger.Binary
        WiredTiger.IntPack

    cc-options:        -Wall
    pkgconfig-depends: wiredtiger -any
    hs-source-dirs:    src
    other-modules:
        WiredTiger.Raw.Context
        WiredTiger.Raw.Types

    default-language:  Haskell2010
    ghc-options:       -Wall -O
    build-depends:
        base >=4.14.1.0 && <4.15,
        binary >= 0.8.9 && < 0.9,
        bytestring >=0.11.1.0 && <0.12,
        containers >=0.6.4.1 && <0.7,
        inline-c >=0.9.1.5 && <0.10,
        utf8-string >= 1.0.2 && < 1.1,

executable access
    main-is:          Main.hs
    hs-source-dirs:   examples/access
    default-language: Haskell2010
    build-depends:
        base ^>=4.14.1.0,
        bytestring -any,
        wiredtiger -any

executable call-center
    main-is:          Main.hs
    hs-source-dirs:   examples/call-center
    default-language: Haskell2010
    build-depends:
        base ^>=4.14.1.0,
        bytestring >=0.11.1.0 && <0.12,
        wiredtiger -any
